--- a/nes.cfg
+++ b/nes.cfg
@@ -18,5 +18,5 @@ SEGMENTS {
   CODE: load=ROM, type=ro, align=$0100;
   RODATA: load=ROM, type=ro, align=$0100;
   VECTORS: load=ROM, type=ro, start=$FFFA;
-  CHR: load=CHRROM, type=ro, align=16, optional=yes;
+  CHARS: load=CHRROM, type=ro, align=16, optional=yes;
 }
